force-app/main/default/objects/nPortal__Context__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>nPortal__Application__r.nPortal__Applicant__r.FirstName + &quot; &quot; + nPortal__Application__r.nPortal__Applicant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>