force-app/main/default/objects/nPortal__Context__c/fields/Current_Route_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Route_Name__c</fullName>
    <formula>nPortal__Session__r.Route_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Route Name</label>
    <type>Text</type>
</CustomField>