force-app/main/default/objects/nPortal__Context__c/fields/Session_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Last_Modified_Date__c</fullName>
    <description>Used in Chexsystems declination flow to determine which context record to evaluate.</description>
    <formula>nPortal__Session__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Last Modified Date</label>
    <type>DateTime</type>
</CustomField>