force-app/main/default/objects/nPortal__Context__c/fields/User_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Contact_ID__c</fullName>
    <formula>CASESAFEID(nPortal__User__r.Contact.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Contact ID</label>
    <type>Text</type>
</CustomField>